style.css
@import url("https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@900&family=Outfit:wght@300&display=swap");

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

.row {
  width: 100%;
  max-width: 1200px;
  margin: 0 auto;
}

.container {
  padding: 60px 0;
}

/* HEADER */
header {
  height: calc(100vh - 210px);
  margin-bottom: 210px; 
}
.header__container {
  display: flex;
}

.header__row {
  margin: 0 -280px;
}

.header__text {
  width: 70%;
  position: absolute;
  top: 20%;
  display: flex;
  justify-content: space-between;
}

.header__title {
  font-family: "Big Shoulders Display";
  font-size: 96px;
  max-width: 450px;
  mix-blend-mode: difference;
  color: #ffffff;
}

.header__body {
  display: flex;
  max-width: 350px;
  max-height: 160px;
}

.header__description--text {
  font-family: "Outfit";
  font-size: 22px;
  line-height: 32px;
  color: #444444;
  margin-bottom: 64px;
}

.header__img--wrapper {
  height: 100vh;
  width: 40%;
  background-color: white;
}

.header__panel {
  color: #ffffff;
  background-color: #151515;
  height: calc(100vh - 210px);
  width: 30%;
  box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
}

.header__img {
  background-image: url("./assets/desktop/image-hero@2x.jpg");
  height: calc(100vh - 210px);
  width: 100%;
  background-size: cover;
  background-position: center;
  box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
  /* background-color: #ffffff; */
}

.header__button {
  width: 260px;
  height: 72px;
  display: flex;
  cursor: pointer;
}

.header__button--text {
  background-color: #151515;
  color: #ffffff;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 18px;
  letter-spacing: 4px;
  font-family: "Big Shoulders Display";
  width: 204px;
}

.header__button--arrow {
  background-color: #d5966c;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 56px;
}

.header__button--text,
.header__button--arrow {
  transition: background-color 0.5s ease-in-out;
}

.header__button:hover .header__button--text {
  background-color: #d5966c;
}

.header__button:hover .header__button--arrow {
  background-color: #151515;
}

/* SHOWCASE */
.showcase__top {
  display: flex;
  justify-content: space-between;
  margin-bottom: 24px;
}

.showcase__top--wrapper {
  height: 400px;
  flex: 2;
  max-width: 700px;
}

.showcase__top--img {
  height: 100%;
  width: 100%;
}

.showcase__header {
  display: flex;
  flex-direction: column;
  justify-content: center;
  flex: 1;
}
.showcase__header--title {
  font-family: "Big Shoulders Display";
  font-size: 60px;
  line-height: 60px;
  color: #151515;
  max-width: 300px;
}

.showcase__header--paragraph {
  font-family: "Outfit";
  font-size: 22px;
  line-height: 32px;
  color: #444444;
  max-width: 350px;
  margin-top: 24px;
}

.showcase__bottom {
  display: flex;
  justify-content: space-between;
}

.showcase__main--wrapper {
  height: 666px;
  flex: 2;
}

.showcase__main--img {
  height: 100%;
  width: 100%;
}

.showcase__bottom--wrapper {
  height: 320px;
}

.showcase__bottom--img {
  height: 100%;
  width: 100%;
}

.showcase__bottom--info {
  display: flex;
  flex-direction: column;
  flex 1;
  margin-left: 40px;
}

.showcase__description {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: #151515;
  color: #ffffff;
  padding: 40px;
  margin-top: 20px;
  max-width: 466px;
  height: 100%;
}

.showcase__description--header {
  font-family: "Big Shoulders Display";
  font-size: 60px;
  line-height: 60px;
}

.showcase__description--paragraph {
  font-family: "Outfit";
  font-size: 22px;
  line-height: 32px;
  margin-top: 30px;
}

/* FOOTER */
footer {
  background-color: #151515;
  color: #ffffff;
}

.footer__content {
  display: flex;
  justify-content: space-between;
}

.footer__description {
  display: flex;
  justify-content: space-between;
  flex: 2;
}

.footer__header {
  font-family: "Big Shoulders Display";
  font-size: 36px;
  max-width: 170px;
}

.footer__body {
  font-family: "Outfit";
  font-size: 18px;
  line-height: 28px;
  max-width: 432px;
}

.footer__links {
  display: flex;
  justify-content: flex-end;
  flex: 1;
}

.footer__img--wrapper {
  width: 32px;
  height: 32px;
  margin: 0 8px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.footer__img {
  width: 20px;
  height: 20px;
}

@media (max-width: 375px) {
  .row {
    margin: 0 16px;
    max-width: 343px;
  }

  .header__panel {
    display: none;
  }

  header {
    height: 100px;
  }

  .header__img--wrapper {
    max-height: 240px;
    width: 100%;
  }

  .header__img {
    background-image: url("./assets/mobile/image-hero@2x.jpg");
    height: 100%;
    width: 100%;
    background-size: cover;
    background-position: center;
    box-shadow: none;
  }

  .header__text {
    position: static;
    display: flex;
    flex-direction: column;
    margin: 28px 16px;
    min-width: 280px;
    color: #151515;
  }

  .header__title {
    font-size: 60px;
    line-height: 55px;
  }

  .header__description--text {
    font-size: 18px;
    line-height: 28px;
    margin: 28px 0;
    min-width: 320px;
  }

  .showcase {
    display: flex;
    flex-direction: column;
    margin: 20px 0px;
  }

  .showcase__top {
    flex-direction: column-reverse;
  }

  .showcase__top--wrapper {
    max-width: 343px;
    max-height: 320px;
    margin-top: 120px;
    margin-bottom: 28px;
  }

  .showcase__top--img {
    height: 100%;
  }

  .showcase__header--title {
    font-size: 50px;
    line-height: 45px;
    max-width: 280px;
  }

  .showcase__header--paragraph {
    font-size: 18px;
    line-height: 28px;
  }

  .showcase__bottom {
    flex-direction: column;
  }

  .showcase__bottom--info {
    margin-left: 0px;
    max-width: 343px;
  }

  .showcase__bottom--wrapper {
    width: 100%;
    height: 200px;
    margin: 24px 0;
  }

  .showcase__bottom--img{
    height: 100%;
  }

  .showcase__description {
    margin: 20px 0 32px 0;
  }

  .showcase__header--paragraph {
    margin: 28px 0;
  }

  .showcase__description--header {
    font-size: 50px;
    line-height: 45px;
  }

  .showcase__description--paragraph {
    margin-top: 32px;
    font-size: 18px;
    line-height: 28px;
  }

  .showcase__main--wrapper {
    max-width: 343px;
    max-height: 480px;
  }

  .footer__description {
    display: flex;
    flex-direction: column;
  }

  .footer__content {
    flex-direction: column;
    margin: 0px 16px;
  }

  .footer__header {
    font-size: 24px;
    line-height: 24px;
    max-width: 112px;
  }

  .footer__body {
    font-size: 16px;
    margin: 32px 0;
  }

  .footer__links {
    justify-content: flex-start;
    margin-left: -6px;
  }

  .footer__img--wrapper {
    height: 20px;
    width: 20px;
    margin: 0 8px;
  }
}

